tests/compile_fail/add_mass_to_length.stderr
warning: unused import: `whippyunits::*`
 --> tests/compile_fail/add_mass_to_length.rs:2:5
  |
2 | use whippyunits::*;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> tests/compile_fail/add_mass_to_length.rs:10:26
   |
10 |     let _result = mass + length;
   |                          ^^^^^^ expected `1`, found `0`
   |
   = note: expected struct `Quantity<1, -3, 0, i16::MAX, 0, i16::MAX, i16::MAX, i16::MAX>`
              found struct `Quantity<0, i16::MAX, 1, 0, 0, i16::MAX, i16::MAX, i16::MAX>`
